# obraz

./: CMakeLists.txt  CMakeLists.txt.user.1.3  CMakeLists.txt.user.6f9335d  CMakeLists.txt.user.c3401d0  README.md  errors.h  lista.c  lista.h  main.c  menu.c  menu.h  obraz.c  obraz.h  plik.c  plik.c.autosave  plik.h
